@@ -44,6 +44,7 @@
     * Nicer messages for Wlan errors; LCDPrinter now accesses the model for IP
     * Statics generated from submodule
     * Support pausing, resuming and stopping of serial prints from the LCD
+    * Implementation of metadata into /api/files endpoint
 
 0.2.0 (2020-12-14)
 
